[package]
name = "screeps-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.24", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["full", "sync"]}

[dev-dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"